# ci-talk-example-repo

./: CMakeLists.txt  clang-format-ci.sh  clang-tidy-ci.sh
.github/workflows/: cmake.yaml
src/: LinkedList.H  Math.cc  Math.h  main.cc
test/: LinkedList_test.h  Math_test.h  tests.cc
